[package]
name = "hippo"
description = "Generates git repo using cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.7", features = ["derive", "autocomplete"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.22"
